--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-MONGODB_URL = mongodb+srv://thomasfong1020:POZ45826558@vehicles.bzbby.mongodb.net/
+MONGODB_URL = mongodb+srv://thomasfong1020:F584G64M8840@cluster0.gfeeo.mongodb.net/
 GITHUB_CLIENT_SECRET = d0e672f73b9025cac78126661f94043b91ffdc2e
 GITHUB_CLIENT_ID = Ov23limQocEBCKx2gK83
 CALLBACK_URL = http://localhost:3000/github/callback
+
+
+
+
