--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "session": "^0.1.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "swagger-autogen": "^2.23.7"
